{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 38,
  "lineage": "a7f6fe21-3655-3e56-7794-8f3a14e54563",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkInterfaces/portafolio-nic",
            "internal_domain_name_suffix": "tifekd4mnqbe1jaeq1ptmyvoxd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/publicIPAddresses/portafolio-ip",
                "subnet_id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/virtualNetworks/portafolio-vnet/subnets/portafolio-subnet"
              }
            ],
            "location": "westus2",
            "name": "portafolio-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Portafolio_Brian"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkInterfaces/portafolio-nic|/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg",
            "network_interface_id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkInterfaces/portafolio-nic",
            "network_security_group_id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg",
            "location": "westus2",
            "name": "portafolio-nsg",
            "resource_group_name": "Portafolio_Brian",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "portafolio-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Portafolio_Brian",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "portafolio-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Portafolio_Brian",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/networkSecurityGroups/portafolio-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "portafolio-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Portafolio_Brian",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/publicIPAddresses/portafolio-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.236.54.123",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "portafolio-ip",
            "resource_group_name": "Portafolio_Brian",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/virtualNetworks/portafolio-vnet/subnets/portafolio-subnet",
            "name": "portafolio-subnet",
            "resource_group_name": "Portafolio_Brian",
            "virtual_network_name": "portafolio-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0f450a9a-6ccc-4d02-a404-86df3662aebb",
            "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/virtualNetworks/portafolio-vnet",
            "location": "westus2",
            "name": "portafolio-vnet",
            "resource_group_name": "Portafolio_Brian",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/719bc292-a0fa-42d6-8d59-a3bf38e89c4e/resourceGroups/Portafolio_Brian/providers/Microsoft.Network/virtualNetworks/portafolio-vnet/subnets/portafolio-subnet",
                "name": "portafolio-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}